--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-beautifulsoup4==4.13.5
-bs4==0.0.2
-certifi==2025.8.3
-charset-normalizer==3.4.3
-idna==3.10
-prettytable==3.16.0
-requests==2.32.5
-soupsieve==2.8
-typing_extensions==4.15.0
-urllib3==2.5.0
-wcwidth==0.2.14
+blinker==1.9.0
+click==8.3.0
+colorama==0.4.6
+Flask==3.1.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+Werkzeug==3.1.3
